-fixed overflow bug

--- a/resource/theme/default/css/default.css
+++ b/resource/theme/default/css/default.css
@@ -108,7 +108,7 @@ body.modal-open[style] {
 	width:100%;
 	height:100%;
 	z-index: 600;
-	overflow: scroll;
+	overflow-y: scroll;
 	position: fixed;
 	color:#666666;
 	font-size: 14px;
